Creates missing endpoints and improves exception handling