@@ -1,14 +1,10 @@
 package Group7.OAuth.adapter.keycloak;
 
+import Group7.OAuth.application.dtos.JwtTokenDTO;
 import Group7.OAuth.application.dtos.UserDTO;
 import Group7.OAuth.application.dtos.UserRequestDTO;
 import org.springframework.stereotype.Component;
 
-import Group7.OAuth.application.dtos.JwtTokenDTO;
-
-import java.lang.reflect.Array;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -25,7 +21,7 @@ public class KeycloakMapper {
     }
 
     public KeycloakUserRegistration toKeycloakUserRegistration(UserRequestDTO user) {
-        return new KeycloakUserRegistration(user.username(), user.username(), user.firstName(), user.lastName(), user.enabled(), Arrays.asList(new KeycloackCredential("password", user.password(), false)));
+        return new KeycloakUserRegistration(user.username(), user.username(), user.firstName(), user.lastName(), user.enabled(), List.of(new KeycloackCredential("password", user.password(), false)));
     }
 
     public UserDTO toUserDTO(KeycloakUser user) {
